# drasm

./: .env.example  .gitignore  .rust-analyzer.json  Cargo.toml  E2E_TEST.md  FRONTEND_SETUP.md  PLAN.md  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs
drasm-api/: Cargo.toml
drasm-api/src/: lib.rs
examples/: Cargo.toml
examples/adder/: Cargo.toml
examples/adder/src/: lib.rs
examples/echo/: Cargo.toml
examples/echo/src/: lib.rs
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/composables/: useApi.ts  useAuth.ts
frontend/layouts/: default.vue
frontend/middleware/: auth.ts
frontend/pages/: index.vue  login.vue  register.vue
frontend/pages/jobs/: [id].vue  create.vue  index.vue
frontend/pages/modules/: index.vue  upload.vue
frontend/types/: index.ts
orchestrator/: Cargo.toml
orchestrator/src/: kafka.rs  main.rs  supabase.rs
orchestrator/src/api/: auth.rs  jobs.rs  mod.rs  modules.rs
orchestrator/src/middleware/: auth.rs
producer/: Cargo.toml
producer/src/: main.rs
results/: Cargo.toml
results/src/: main.rs
scripts/: create-topics.sh
supabase/: config.toml
supabase/migrations/: 20260313114345_initial_schema.sql
worker/: Cargo.toml
worker/src/: main.rs  retry.rs
