[workspace]
resolver = "2"
members = ["producer", "worker", "results", "common"]


[workspace.dependencies]
rdkafka = { version = "0.39.0", features = ["tokio"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
wasmtime = "42.0.1"
wat = "1.245.1"
anyhow = "1.0.102"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }