[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common/"}
rdkafka.workspace = true 
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
worker-api = { path = "../drasm-api" }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
postgrest = "1.6"
reqwest = { workspace = true, features = ["json", "multipart"] }
dotenvy = "0.15"
anyhow.workspace = true
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
chrono = "0.4"