[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common/"}
rdkafka.workspace = true 
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
wat.workspace = true
anyhow.workspace = true
hostname = "0.4"
uuid = { workspace = true }
redis = { workspace = true }
worker-api = { path = "../drasm-api" }
reqwest = { workspace = true, features = ["json"] }